# PrismShine

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  _review_diff.txt  pyproject.toml
bench/: README.md  __init__.py  compose.runtime.yaml  compose.stack.yaml  compose.yaml
bench/azure/: aci-ragas.yaml  deploy.ps1
bench/runner/: .gitignore  run_bench.py
bench/runtime/: README.md  __init__.py  chorus_shine_loader.py  datasets.py  run_local.py  run_runtime_bench.py  smoke_local.py  targets.example.json
bench/runtime/results/docker_2026-07-20/: summary.json
bench/runtime/results/local_2026-07-20/: scoreboard.md  summary.json
bench/runtime/results/smoke/: scoreboard.md  summary.json  targets.smoke.json
bench/shims/chorus-shine/: Dockerfile  app.py  requirements.txt
bench/shims/hhem/: Dockerfile  app.py  requirements.txt
bench/shims/insight-stack/: Dockerfile  app.py  requirements.txt
bench/shims/ollama/: Dockerfile
bench/shims/oss-langgraph-hhem/: Dockerfile  app.py  requirements.txt
bench/shims/oss-langgraph-lettuce/: Dockerfile  app.py  requirements.txt
bench/shims/oss-langgraph-minilm/: Dockerfile  app.py  requirements.txt
bench/shims/oss-llmguard/: Dockerfile  app.py  requirements.txt
bench/shims/prismshine/: Dockerfile  app.py  requirements.txt
bench/shims/prismshine/baked/: export_meta.json
bench/shims/ragas/: Dockerfile  app.py  requirements.txt
bench/stack/: README.md  __init__.py  datasets.py  run_stack_bench.py  smoke_local.py  targets.aci.json  targets.example.json
bench/stack/results/aci_run2/: scoreboard.md  summary.json
bench/stack/results/aci_run3/: scoreboard.md  summary.json
bench/stack/results/aci_run4/: summary.json
benchmarks/calibration/: halueval_minilm.json
benchmarks/progress/2026-07-19_baseline/: README.md  raw_hhem_B1.jsonl  raw_hhem_B2.jsonl  raw_prismshine-fast_B1.jsonl  raw_prismshine-fast_B2.jsonl  scoreboard.md  summary.json
benchmarks/progress/2026-07-19_baseline/b1_calibrated/: calibration.json
benchmarks/progress/2026-07-19_baseline/b1_ragtruth/: bench_report.json  bench_report.md  grounding.json
benchmarks/progress/2026-07-19_baseline/b3_cause/: bench_report.json  bench_report.md  cause_side.json
benchmarks/progress/2026-07-19_comparative_aci/: README.md  scoreboard.md  summary.json
benchmarks/progress/2026-07-19_containment/: README.md  raw_hhem_B1.jsonl  raw_hhem_B2.jsonl  raw_prismshine-fast_B1.jsonl  raw_prismshine-fast_B2.jsonl  scoreboard.md  summary.json
benchmarks/progress/2026-07-20_improvements/: README.md
benchmarks/progress/2026-07-20_run4_onnx/: MARKET_READINESS.md  README.md  scoreboard.md  summary.json
benchmarks/progress/2026-07-20_runtime_docker/: FULL_REPORT.md  README.md  inprocess_bench_report.md  raw_chorus-shine.jsonl  raw_oss-langgraph-hhem.jsonl  raw_oss-langgraph-lettuce.jsonl  raw_oss-langgraph-minilm.jsonl  scoreboard.md
benchmarks/progress/2026-07-20_stack_suite/: README.md  scoreboard.md  summary.json
benchmarks/progress/2026-07-20_stack_suite_run4/: README.md  scoreboard.md
docs/: BENCHMARKS.md  DECISIONS.md  DESIGN.md  HANDBOOK.md  INTEGRATION.md  LIMITS.md  POSITIONING.md  UPSTREAM.md  demo.html  index.html
docs/diagrams/: make_architecture_map.py
examples/: enterprise_wiring_demo.py  tier4_judge_demo.py
handoffs/: handoff-chorusgraph.md  handoff-fix1.md  handoff-prismcortex.md  handoff-prismguard-docs-features.md  handoff-prismguard-dx.md  handoff-prismlang.md  handoff-prismlib-plus.md  handoff-prismlib.md  handoff-prismshine-landing.md  master-handoff1.md
kb/: README.md
kb/diagrams/: make_ecosystem_map.py
kb/libraries/: chorus-fabric.md  chorusgraph.md  chorusmesh.md  insightplugin.md  prismcortex.md  prismguard.md  prismlang.md  prismlib-plus.md  prismlib.md  prismrag-patch.md  prismresonance.md  vectorbridge.md
prismshine/: __init__.py  __main__.py  actions.py  audit.py  cache.py  calibrate.py  cli.py  config.py  dropin.py  encoder.py  feedback.py  fusion.py  gate.py  hashing.py  models.py  policy.py  regen.py  runtime.py  wiring.py
prismshine/bench/: __init__.py  calibrate_b1.py  calibrate_minilm.py  embed.py  metrics.py  ragtruth.py  report.py  runner.py
prismshine/bench/suites/: __init__.py  cause.py  consistency.py  grounding.py  latency.py
prismshine/data/: __init__.py  sample_bundle.json
prismshine/evidence/: __init__.py  builder.py
prismshine/evidence/adapters/: __init__.py  chorusgraph.py  generic.py  langgraph.py
prismshine/forensics/: __init__.py  engine.py
prismshine/forensics/detectors/: __init__.py  cache.py  context.py  guardrun.py  llm.py  memory.py  retrieval.py  tools.py
prismshine/grounding/: __init__.py  contradiction.py  copycheck.py  coverage.py  judge.py  spans.py  splitter.py
prismshine/handbook/: __init__.py  loader.py  schema.py
prismshine/handbook/builtin/: __init__.py  clinical.yaml  core.yaml  finance.yaml  legal.yaml
prismshine/integrations/: __init__.py  chorusgraph.py  langgraph.py  prismcortex.py  prismguard.py  runtime_base.py
prismshine/tools/: __init__.py  ensure_span_onnx.py  export_span_onnx.py
tests/: README.md  conftest.py  test_action_matrix.py  test_bench_cli.py  test_byo_runtime.py  test_cache_audit_cli.py  test_calibrate_spans_judge.py  test_chorusgraph_live_matrix.py  test_copycheck.py  test_coverage.py  test_degradation_matrix.py  test_dropin_dx.py  test_effect_quality.py  test_fusion_edges.py  test_fusion_policy.py  test_gaps_closure.py  test_golden_verdicts.py  test_import_purity.py  test_integrations_unit.py  test_models.py  test_p0_p3.py  test_readme_examples.py  test_runtime_bench.py  test_runtime_conformance.py
tests/benchmarks/: test_cause_suite.py  test_consistency_suite.py  test_grounding_suite.py  test_latency_harness.py  test_ragtruth_proxy.py
tests/fixes/: test_fix1_fix7.py  test_fix5_fix14.py
tests/forensics/: test_detectors.py
