[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismshine"
version = "0.2.2"
description = "Anti-hallucination verdict engine: cause-side forensics + grounding verification in one auditable gate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Insight IT Solutions LLC", email = "insightits.info@gmail.com" }]
keywords = [
    "hallucination",
    "rag",
    "grounding",
    "agent",
    "verification",
    "llm",
    "audit",
    "prismshine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
coverage = ["prismlang>=0.1.2"]                     # shared ONNX encoder session + model_id()
spans = ["onnxruntime>=1.17", "tokenizers>=0.15", "huggingface-hub>=0.23"]  # Tier-3 span classifier
chorusgraph = ["chorusgraph>=1.3.0"]                # richest runtime plugin (ADR-008 interceptors, chunk-vector read path)
langgraph = ["langgraph>=0.2"]                      # LangGraph runtime plugin
guard = ["prismguard>=0.1.9"]                       # input/output symmetry (0.1.9+)
judge-openai = ["openai>=1.30"]                     # Tier-4 escalation (opt-in)
judge-gemini = ["google-genai>=1.0"]                # Tier-4 escalation (opt-in)
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
prismshine = "prismshine.cli:main"

[project.urls]
Homepage = "https://github.com/insightitsGit/PrismShine"
Documentation = "https://github.com/insightitsGit/PrismShine/blob/main/docs/DESIGN.md"
Repository = "https://github.com/insightitsGit/PrismShine"
Changelog = "https://github.com/insightitsGit/PrismShine/blob/main/CHANGELOG.md"
Issues = "https://github.com/insightitsGit/PrismShine/issues"
"Benchmark receipt" = "https://github.com/insightitsGit/PrismShine/tree/main/benchmarks/progress/2026-07-20_run4_onnx"

[tool.hatch.build.targets.wheel]
packages = ["prismshine"]

[tool.hatch.build.targets.wheel.force-include]
"prismshine/handbook/builtin/core.yaml" = "prismshine/handbook/builtin/core.yaml"
"prismshine/handbook/builtin/clinical.yaml" = "prismshine/handbook/builtin/clinical.yaml"
"prismshine/handbook/builtin/finance.yaml" = "prismshine/handbook/builtin/finance.yaml"
"prismshine/handbook/builtin/legal.yaml" = "prismshine/handbook/builtin/legal.yaml"
"prismshine/data/sample_bundle.json" = "prismshine/data/sample_bundle.json"

# Keep the sdist lean for enterprise / from-source installs. Hatch VCS walking
# can still pick up nested gitignored caches (bench datasets, baked tokenizer).
# only-include + image exclude → package code/tests/docs text, not benches/KB art.
[tool.hatch.build.targets.sdist]
only-include = [
  "prismshine",
  "tests",
  "examples",
  "docs",
  "CHANGELOG.md",
  "LICENSE",
]
exclude = [
  "*.png",
  "*.jpg",
  "*.jpeg",
  "*.gif",
  "*.webp",
  "*.onnx",
  "*.onnx.data",
  "**/baked/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "benchmark: latency / quality harness (soft budgets)",
]

[tool.coverage.run]
source = ["prismshine"]
omit = ["prismshine/integrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
